Fixed some hazardous issues discovered by Jenkins.